fix: less gap and margin on mobile in Skills section

--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -149,6 +149,11 @@
       flex-wrap: wrap;
       gap: 10px;
       margin-bottom: 20px;
+
+      @media screen and (max-width: 768px) {
+        gap: 8px;
+        margin-bottom: 8px;
+      }
     }
 
     .skillSpecial {
